ping-smart-club-web-boot/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-smart-club-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: ping-smart-club.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ping-smart-club-service
            port:
              number: 80
